syntax = "proto3";

package pictweet;s

option go_package="pictweetpb";

message Tweet{
    int32 id = 1;
    string title = 2;
    string content = 3;
    string image_url = 4;
    string author = 5;
    string avatar_url = 6;
    string created_at = 7;
}

message Comment{
    int32 id = 1;
    string text = 2;
    int32 user_id = 3;
    string created_at = 4;
}

message ListTweetRequest{

}

message ListTweetResponse{
    Tweet tweet = 1;
}

message CreateTweetRequest{
    string title = 1;
    string content = 2;
    string image_url = 3;
    int32 user_id = 4;
}

message CreateTweetResponse{
    string result = 1;
}

message ShowTweetRequest{
    int32 tweet_id = 1;
}

message ShowTweetResponse{
    Tweet tweet = 1;
    repeated Comment comment = 2;
}
